<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginButtonClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:text="@string/username_value" />

        <EditText
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text="@string/password_value" />

        <Button
            android:id="@+id/fragment_login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:onClickListener="@{loginButtonClickListener}"
            android:text="@string/login_text" />
    </LinearLayout>
</layout>